--- a/templates/default.html
+++ b/templates/default.html
@@ -16,8 +16,7 @@ $endif$
 $if(description-meta)$
   <meta name="description" content="$description-meta$" />
 $endif$
-<!-- <title>$title-meta$</title> -->
-  <title>$if(title-prefix)$$title-prefix$ ΓÇô $endif$$pagetitle$</title>
+  <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
   <style>
     $styles.html()$
   </style>
